--- a/CustomContextMenu.csproj
+++ b/CustomContextMenu.csproj
@@ -4,7 +4,7 @@
     <LangVersion>10</LangVersion>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <OutputType>Exe</OutputType>
+    <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>CustomContextMenu</RootNamespace>
     <AssemblyName>CustomContextMenu</AssemblyName>
